<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Family Ties</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home_screen">Home</string>
    <string name="slideshow">Slideshow</string>
    <string name="quiz">Quiz</string>
    <string name="my_family">My Family</string>
    <string name="logout">Logout</string>
    <string name="title_activity_register">Register</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_my_family">MyFamilyActivity</string>
    <string name="title_activity_family_member">FamilyMemberActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="start">Start</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="title_activity_quiz_start">QuizStartActivity</string>
    <string name="settings">Settings</string>
    <string name="google_Login">Google+ Login</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
    <string name="title_activity_slideshow">SlideshowActivity</string>
    <string name="title_test_suite_activity">Test Suite</string>

    <color name="light_blue">#46D8F2</color>

    <string name="title">Title</string>

    <color name="transparent">#00FFFFFF</color>

    <string name="title_activity_quiz_results">QuizResultsActivity</string>
    <string name="back_to_menu">Go Back to the Menu</string>
    <string name="title_activity_parse_json">ParseJSON</string>
    <string name="app_id">248424948615963</string>
    <string name="title_activity_facebook_login">FacebookLoginActivity</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="action_people">With whom?</string>
    <string name="action_people_default">Select family members</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="single_user_selected">%1$s</string>
    <string name="two_users_selected">%1$s and %2$s</string>
    <string name="multiple_users_selected">%1$s and %2$s others</string>
    <string name="title_activity_full_screen_image">FullScreenImageActivity</string>
    <string name="title_activity_messaging">Messaging</string>
    <string name="title_activity_send_message">SendMessageActivity</string>

</resources>
