<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:stretchColumns="*"
    tools:context=".HomeScreenActivity" >
          
	<Button
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/slideshow" />
          
	<Button
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/quiz"
		android:onClick="quiz" />
                    
	<Button
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/my_family"
		android:onClick="myFamily" /> 
		
	<Button
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/settings"
		android:onClick="settings" />
			          
	<Button
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/logout"
		android:onClick="logout" />
	
	<Button
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:text="@string/test_button"
		android:onClick="requestIDs" />	    
		      
</TableLayout>
