<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/first_name"
        android:textSize="25sp"
        android:paddingTop="8dp" />
    
    <EditText
        android:id="@+id/register_surname"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
                android:textSize="25sp"
        android:hint="@string/surname"
        android:paddingTop="8dp" />
    
    <EditText
		android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
                android:textSize="25sp"
        android:hint="@string/username"
        android:paddingTop="8dp" />
    
    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
		android:inputType="textPassword"
		        android:textSize="25sp"
        android:hint="@string/password"
        android:paddingTop="8dp" />
    
    <Button
        android:id="@+id/register_confirm"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
                android:textSize="25sp"
        android:text="@string/register"
        android:onClick="register" />

    
</TableLayout>
