<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:stretchColumns="*"
    tools:context=".MainActivity" >
    
     <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title2"
        android:contentDescription="@string/title"/>

    
	<EditText

		android:id="@+id/editUsername"
		android:textSize="30sp"
		android:layout_width="0dp"
		android:layout_height="70dp"
		android:hint="@string/username" />

	<EditText
		android:id="@+id/editPassword"
		android:textSize="30sp"
		android:inputType="textPassword"
		android:layout_width="0dp"
		android:layout_height="70dp"
		android:hint="@string/password" />
	
	<CheckBox
         android:id="@+id/rememberUser"
         android:layout_width="wrap_content"
		 android:layout_height="70dp"
         android:text="Remember me" 
		 android:textSize="30sp"
         android:onClick="rememberUser"/>
	
    <Button
        android:id="@+id/loginButton"
        android:textSize="30sp"
        android:layout_width="wrap_content"
		android:layout_height="70dp"
        android:onClick="getAccountInfo"
        android:text="@string/login" />
    
    <Button 
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
                android:textSize="30sp"
		android:layout_height="70dp"
        android:onClick="register"
        android:text="@string/register" />
    
    <TextView 
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</TableLayout>